<resources>
    <string name="app_name">Campings ARG</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mapa">Map</string>
    <string name="title_activity_perfil_camping">PerfilCampingActivity</string>
    <string name="ubicacion">Ubicación</string>
    <string name="contacto">Contacto</string>
    <string name="caracteristicas">Caracteristicas</string>
    <string name="alojamientos">Alojamientos</string>
    <string name="servicios">Servicios</string>
    <string name="naturaleza">Naturaleza</string>
    <string name="actividades">Actividades</string>
    <string name="vacio">(sin datos)</string>
</resources>
