<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PerfilCampingActivity"
    tools:showIn="@layout/activity_perfil_camping">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10sp">

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map_perfil"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                tools:context="com.campingsarg.bigbambu.campingsarg.PerfilCampingActivity"
                android:layout_margin="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10sp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contacto"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_margin="5dp"/>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Telefono:"
                            android:layout_margin="5dp"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/lbl_perfil_telefono"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vacio"
                            android:layout_margin="5dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Dirección:"
                            android:layout_margin="5dp"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/lbl_perfil_direccion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vacio"
                            android:layout_margin="5dp" />
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Web:"
                            android:layout_margin="5dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/lbl_perfil_web"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vacio"
                            android:layout_margin="5dp" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10sp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/caracteristicas"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_margin="5dp"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Abierto:"
                            android:layout_margin="5dp"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/lbl_perfil_abierto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vacio"
                            android:layout_margin="5dp" />
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Tipo:"
                            android:layout_margin="5dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/lbl_perfil_tipo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vacio"
                            android:layout_margin="5dp" />
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Parcelas:"
                            android:layout_margin="5dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/lbl_perfil_parcelas"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vacio"
                            android:layout_margin="5dp" />
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Mascotas:"
                            android:layout_margin="5dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/lbl_perfil_mascotas"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vacio"
                            android:layout_margin="5dp" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alojamientos"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_margin="5dp"/>

                <TableLayout
                    android:id="@+id/table_perfil_alojamientos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/servicios"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_margin="5dp"/>

                <TableLayout
                    android:id="@+id/table_perfil_servicios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/naturaleza"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_margin="5dp"/>

                <TableLayout
                    android:id="@+id/table_perfil_naturaleza"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/actividades"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_margin="5dp"/>

                <TableLayout
                    android:id="@+id/table_perfil_actividades"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</android.support.v4.widget.NestedScrollView>